fixed formatting to align with artifact details

--- a/src/app/newsletter-form/newsletter-form.component.scss
+++ b/src/app/newsletter-form/newsletter-form.component.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 .newsletter-container {
-  padding-left: 800px;
+  padding-left: 698px;
   padding-bottom: 100px;
   margin-top: -190px;
 }
